# XTVulcan

./: .gitignore  CMakeLists.txt
HelloTriangle/: HelloTriangle.cpp
reference/1/: HelloTriangle.cpp  Makefile
reference/2/: CMakeLists.txt
reference/2/data/shaders/: compile.sh
reference/2/src/: application.cpp  application.hpp
reference/shaders/: shader.vert
src/: application.cpp  application.hpp  main.cpp
